RESOLVED FIXED80248
Geolocation should use a ScriptExecutionContext as its context object
https://bugs.webkit.org/show_bug.cgi?id=80248
Summary Geolocation should use a ScriptExecutionContext as its context object
Adam Barth
Reported 2012-03-05 00:31:10 PST
Geolocation should use a ScriptExecutionContext as its context object
Attachments
Patch (14.17 KB, patch)
2012-03-05 00:47 PST, Adam Barth
no flags
Patch for landing (14.93 KB, patch)
2012-03-05 09:41 PST, Adam Barth
no flags
Adam Barth
Comment 1 2012-03-05 00:47:50 PST
Build Bot
Comment 2 2012-03-05 02:23:29 PST
Adam Barth
Comment 3 2012-03-05 09:41:11 PST
Created attachment 130155 [details] Patch for landing
Adam Barth
Comment 4 2012-03-05 10:18:03 PST
Csaba Osztrogonác
Comment 5 2012-03-05 22:38:57 PST
Reopen, because it broke the --minimal build: /usr/bin/gold: /ramdisk/qt-linux-release-minimal/build/WebKitBuild/Release/Source/WebCore/release/libWebCore.a(NavigatorGeolocation.o): in function WebCore::NavigatorGeolocation::geolocation() const:NavigatorGeolocation.cpp(.text._ZNK7WebCore20NavigatorGeolocation11geolocationEv+0x57): error: undefined reference to 'WebCore::Geolocation::create(WebCore::ScriptExecutionContext*)' c
Eric Seidel (no email)
Comment 6 2012-03-05 22:42:34 PST
We should consider adding a --minimal EWS bot to prevent such breakages.
Adam Barth
Comment 7 2012-03-05 23:25:35 PST
Thanks. Will fix in a moment when my working copy is free.
Adam Barth
Comment 8 2012-03-05 23:54:50 PST
Adam Barth
Comment 9 2012-03-23 17:25:53 PDT
This is fixed.
Note You need to log in before you can comment on or make changes to this bug.